--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
 <head>
 <title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
+<link rel="stylesheet" href="bluestyle.css" style="width:100%;max-width:960px">
 </head>
 <body>
 
 <h1>Hello world!</h1>
-<img src="Mohammad Hossein Darbandi - Pandas.png">
 <p>This is the first file in my new Git Repo.</p>
-<p>A new line in our file!</p>
-
+<p>This line is here to show how merging works.</p>
 
 </body>
 </html>
