Update index.html with my first experience explanation

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 <title>Hello World!</title>
+<h1>this is my firs experience with git/github</h1>
 <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
 <h1>Hello world!</h1>
+  <h3>this is my firs kaggle certificate</h3>
 <div><img src="Mohammad Hossein Darbandi - Pandas.png" alt="Mohammad Hossein Darbandi - Pandas.certificate" style="width:100%;max-width:640px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
